<resources>
    <string name="app_name">TIC TAC TOE</string>
    <string name="welcome_to_tic_tac_toe">WELCOME TO TIC TAC TOE</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="textview">TextView</string>
</resources>